--- a/参考.ipynb
+++ b/参考.ipynb
@@ -295,14 +295,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2, 396)\n"
+      "(1, 398)\n"
      ]
     }
    ],
@@ -317,11 +317,8 @@
     "\n",
     "left = np.random.rand(21,2)\n",
     "right = np.random.rand(21,2)\n",
-    "face = np.random.rand(123, 2)\n",
+    "face = np.random.rand(124, 2)\n",
     "body = np.random.rand(33,2)\n",
-    "    \n",
-    "# 然后我们将这些数组添加到final列表中\n",
-    "final.append([left, right, face, body])\n",
     "\n",
     "# 我们也将这些数组拼接成一个一维数组，并添加到final_input列表中\n",
     "final_input.append(np.concatenate((left, right, face, body), axis=None))\n",
@@ -377,6 +374,48 @@
     "\n",
     "# Close MediaPipe Holistic.\n",
     "holistic.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "375\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [464, 185, 40, 39, 37, 0, 267, 270, 269, 409,\n",
+    "            453, 146, 91, 181, 84, 17, 314, 405, 321, 375,\n",
+    "            452, 184, 74, 73, 11, 302, 303, 304, 408, 384,\n",
+    "            451, 77, 90, 180, 85, 16, 315, 404, 320, 375,\n",
+    "            450, 199, 200, 386, 387, 388, 466, 163, 359, 385,\n",
+    "            449, 448, 227, 234, 116, 123, 117, 111, 118, 50,\n",
+    "            348, 261, 330, 266, 347, 280, 425, 352, 346, 22,\n",
+    "            221, 156, 46, 53, 52, 65, 55, 113, 225, 224, 223,\n",
+    "            247, 30, 29, 27, 28, 56, 190, 130, 33, 246, 161,\n",
+    "            160, 159, 158, 157, 173, 31, 228, 229, 230, 231,\n",
+    "            232, 233, 285, 295, 282, 283, 276, 413, 441, 442,\n",
+    "            443, 444, 445, 342, 414, 286, 258, 257, 259, 260,\n",
+    "            467, 362, 398]\n",
+    "\n",
+    "# 使用字典来计数元素出现的次数\n",
+    "element_count = {}\n",
+    "for element in my_list:\n",
+    "    if element in element_count:\n",
+    "        element_count[element] += 1\n",
+    "    else:\n",
+    "        element_count[element] = 1\n",
+    "\n",
+    "# 找出出现次数最多的元素\n",
+    "most_frequent_element = max(element_count, key=element_count.get)\n",
+    "print(most_frequent_element)  # 输出: 375\n",
+    "\n"
    ]
   },
   {
