--- a/参考.ipynb
+++ b/参考.ipynb
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -338,6 +338,13 @@
      "text": [
       "Image loaded successfully: /Users/leiliu/Desktop/png-clipart-lifted-hands-slender-hands-open-hand.png\n",
       "No left hand landmarks detected.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: Created TensorFlow Lite XNNPACK delegate for CPU.\n"
      ]
     }
    ],
@@ -416,6 +423,25 @@
     "most_frequent_element = max(element_count, key=element_count.get)\n",
     "print(most_frequent_element)  # 输出: 375\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 测试cuda是否可用\n",
+    "import torch\n",
+    "print(torch.cuda.is_available())\n"
    ]
   },
   {
